Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
Using reactos-bootcd-0.4.15-dev-5018-g5bd03d8-x86-gcc-lin-dbg
- Open D: in explorer (ReactOS BootCD)
- Copy "reactos" folder onto desktop
- Cancel operation
- While "cancelling" in progress, call Desktop context menu
- ASSERT

See logs.
// code placeholder
|
* <shell32.dll:86974 (sdk/include/crt/mingw32/intrin_x86.h:1678 (CDefView::OnContextMenu))> |
Frames:
|
* <shell32.dll:f08c3 (sdk/include/crt/mingw32/intrin_x86.h:1678 (_ZN3ATL8CStringTIwNS_11StrTraitATLIwNS_11ChTraitsCRTIwEEEEEC1EPKw))> |
* <shell32.dll:eda73 (sdk/lib/atl/atlcom.h:111 (CComObjectRootEx<ATL::CComMultiThreadModelNoCS>::InternalRelease))> |
* <shell32.dll:f04fd (sdk/lib/atl/atlexcept.h:28 (_ZN3ATL8CStringTIwNS_11StrTraitATLIwNS_11ChTraitsCRTIwEEEEEC1EPKw))> |
* <user32.dll:6a431 (sdk/lib/crt/printf/_sxprintf.c:47 (wvsprintfA))> |
* <user32.dll:5e78f (win32ss/user/user32/windows/message.c:1558 (IntCallWindowProcW))> |
* <user32.dll:5eba9 (win32ss/user/user32/windows/message.c:1832 (CallWindowProcA))> |
* <user32.dll:5f7a2 (win32ss/user/user32/windows/message.c:2302 (PostMessageW))> |
* <user32.dll:42233 (win32ss/user/user32/windows/defwnd.c:414 (User32DefWindowProc))> |
* <user32.dll:433c7 (win32ss/user/user32/windows/defwnd.c:1055 (RealDefWindowProcW))> |
* <uxtheme.dll:fce9 (dll/win32/uxtheme/themehooks.c:279 (ThemeDefWindowProcW))> |
* <user32.dll:43d45 (win32ss/user/user32/windows/dialog.c:2447 (DIALOG_FixOneChildOnChangeFocus))> |
* <comctl32.dll:546c7 (dll/win32/comctl32/listview.c:11993 (LISTVIEW_WindowProc))> |
* <user32.dll:6a431 (sdk/lib/crt/printf/_sxprintf.c:47 (wvsprintfA))> |
* <user32.dll:5e78f (win32ss/user/user32/windows/message.c:1558 (IntCallWindowProcW))> |
* <user32.dll:5eba9 (win32ss/user/user32/windows/message.c:1832 (CallWindowProcA))> |
* <user32.dll:5f7a2 (win32ss/user/user32/windows/message.c:2302 (PostMessageW))> |
* <comctl32.dll:5702f (dll/win32/comctl32/listview.c:11027 (LISTVIEW_WindowProc))> |
* <user32.dll:6a431 (sdk/lib/crt/printf/_sxprintf.c:47 (wvsprintfA))> |
* <user32.dll:5e78f (win32ss/user/user32/windows/message.c:1558 (IntCallWindowProcW))> |
* <user32.dll:5eba9 (win32ss/user/user32/windows/message.c:1832 (CallWindowProcA))>--- Press q to abort, any other key to continue ---* <user32.dll:5f31a (win32ss/user/user32/windows/message.c:2135 (GetMessageW))> |
* <user32.dll:488c0 (win32ss/user/user32/windows/dialog.c:1850 (DialogBoxIndirectParamAorW))> |
* <user32.dll:48952 (win32ss/user/user32/windows/dialog.c:1884 (DialogBoxIndirectParamW))> |
* <user32.dll:489ce (win32ss/user/user32/windows/dialog.c:1915 (DialogBoxParamA))> |
* <user32.dll:5a8d4 (win32ss/user/user32/windows/messagebox.c:1048 (SoftModalMessageBox))> |
* <user32.dll:5ae41 (win32ss/user/user32/windows/messagebox.c:1162 (MessageBoxIndirectA))> |
* <user32.dll:5aed0 (win32ss/user/user32/windows/messagebox.c:1195 (MessageBoxIndirectA))> |
* <user32.dll:5af02 (win32ss/user/user32/windows/messagebox.c:1209 (MessageBoxIndirectA))> |
* <shell32.dll:7889b (dll/win32/shell32/shlfileop.cpp:695 (CheckForError))> |
* <shell32.dll:79035 (dll/win32/shell32/shlfileop.cpp:826 (SHNotifyCopyFileW))> |
* <shell32.dll:7c003 (dll/win32/shell32/shlfileop.cpp:1429 (copy_file_to_file))> |
* <shell32.dll:7c7a2 (dll/win32/shell32/shlfileop.cpp:1443 (copy_files))> |
* <shell32.dll:7c2a9 (dll/win32/shell32/shlfileop.cpp:1391 (copy_dir_to_dir))> |
* <shell32.dll:7c8c4 (dll/win32/shell32/shlfileop.cpp:1446 (copy_files))> |
* <shell32.dll:7e268 (dll/win32/shell32/shlfileop.cpp:2034 (SHFileOperationW))> |
* <shell32.dll:6a5a7 (dll/win32/shell32/droptargets/CFSDropTarget.cpp:93 (CFSDropTarget::_CopyItems))> |
* <shell32.dll:6be9d (dll/win32/shell32/droptargets/CFSDropTarget.cpp:676 (CFSDropTarget::_DoDrop))> |
* <shell32.dll:6c316 (dll/win32/shell32/droptargets/CFSDropTarget.cpp:447 (CFSDropTarget::Drop))> |
* <shlwapi.dll:81db (C:\Users\Kyle\Documents\GitHub\reactos\output-MinGW-i386/sdk/include/psdk/oleidl.h:3687 (SHSimulateDrop))> |
* <shell32.dll:95c13 (dll/win32/shell32/CDefaultContextMenu.cpp:744 (CDefaultContextMenu::DoPaste))> |
* <shell32.dll:979c3 (dll/win32/shell32/CDefaultContextMenu.cpp:1226 (CDefaultContextMenu::InvokeCommand))>--- Press q to abort, any other key to continue ---* <shell32.dll:8e7b0 (dll/win32/shell32/CDefViewBckgrndMenu.cpp:251 (CDefViewBckgrndMenu::InvokeCommand))> |
* <shell32.dll:86337 (dll/win32/shell32/CDefView.cpp:1481 (CDefView::InvokeContextMenuCommand))> |
* <shell32.dll:8a683 (dll/win32/shell32/CDefView.cpp:1686 (CDefView::OnExplorerCommand))> |
* <shell32.dll:8aa00 (dll/win32/shell32/CDefView.cpp:1929 (CDefView::OnCommand))> |
* <shell32.dll:f083d (sdk/lib/atl/atlsimpstr.h:531 (_ZN3ATL8CStringTIwNS_11StrTraitATLIwNS_11ChTraitsCRTIwEEEEEC1EPKw))> |
* <shell32.dll:eda73 (sdk/lib/atl/atlcom.h:111 (CComObjectRootEx<ATL::CComMultiThreadModelNoCS>::InternalRelease))> |
* <shell32.dll:f04fd (sdk/lib/atl/atlexcept.h:28 (_ZN3ATL8CStringTIwNS_11StrTraitATLIwNS_11ChTraitsCRTIwEEEEEC1EPKw))> |
* <user32.dll:6a431 (sdk/lib/crt/printf/_sxprintf.c:47 (wvsprintfA))> |
* <user32.dll:5e78f (win32ss/user/user32/windows/message.c:1558 (IntCallWindowProcW))> |
* <user32.dll:605d6 (win32ss/user/user32/windows/message.c:472 (User32CallWindowProcFromKernel))> |
* <ntdll.dll:100d4 (dll/ntdll/dispatch/i386/dispatch.S:136 (KiUserCallbackDispatcher))> |
* <shell32.dll:8970c (dll/win32/shell32/CDefView.cpp:2497 (CDefView::TranslateAcceleratorW))> |
* <shell32.dll:1389e (dll/win32/shell32/shelldesktop/CDesktopBrowser.cpp:513 (SHDesktopMessageLoop))> |
* <explorer.exe:35dc (base/shell/explorer/rshell.cpp:101 (_SHDesktopMessageLoop))> |
* <explorer.exe:2130 (base/shell/explorer/desktop.cpp:167 (CDesktopThread::DesktopThreadProc))> |
* <explorer.exe:2146 (base/shell/explorer/desktop.cpp:177 (CDesktopThread::s_DesktopThreadProc))> |
* <kernel32.dll:1c97b (dll/win32/kernel32/client/thread.c:71 (BaseThreadStartup))> |
Attachments
Issue Links
- is blocked by
-
CORE-18613 Cannot open more than one Disk properties dialog with context menu
-
- Resolved
-