[SHELL32] Fix Assert of OnContextMenu on Right click spamming while cancelling folder copy

Missinng Release cached IContextMenu

JIRA issue: CORE-18366