dll/win32/shell32/CDefView.cpp
@@ -135,6 +135,7 @@ class CDefView :
         INT _FindInsertableIndexFromPoint(POINT pt);
         void _HandleStatusBarResize(int width);
         void _ForceStatusBarResize();
+        void InitCM();
 
     public:
         CDefView();
@@ -1304,18 +1305,20 @@ UINT ReallyGetMenuItemID(HMENU hmenu, int i)
     return UINT_MAX;
 }
 
-HRESULT CDefView::FillFileMenu()
+void CDefView::InitCM()
 {
-    HMENU hFileMenu = GetSubmenuByID(m_hMenu, FCIDM_MENU_FILE);
-    if (!hFileMenu)
-        return E_FAIL;
-
-    /* Release cached IContextMenu */
     if (m_pCM)
     {
         IUnknown_SetSite(m_pCM, NULL);
         m_pCM.Release();
     }
+}
+
+HRESULT CDefView::FillFileMenu()
+{
+    HMENU hFileMenu = GetSubmenuByID(m_hMenu, FCIDM_MENU_FILE);
+    if (!hFileMenu)
+        return E_FAIL;
 
     /* Cleanup the items added previously */
     for (int i = GetMenuItemCount(hFileMenu) - 1; i >= 0; i--)
@@ -1327,6 +1330,8 @@ HRESULT CDefView::FillFileMenu()
 
     m_cidl = m_ListView.GetSelectedCount();
 
+    /* Release cached IContextMenu */
+    InitCM();
     /* Store the context menu in m_pCM and keep it in order to invoke the selected command later on */
     HRESULT hr = GetItemObject((m_cidl ? SVGIO_SELECTION : SVGIO_BACKGROUND),
                                IID_PPV_ARG(IContextMenu, &m_pCM));
@@ -1513,6 +1518,8 @@ HRESULT CDefView::OpenSelectedItems()
     if (!hMenu)
         return E_FAIL;
 
+    /* Release cached IContextMenu */
+    InitCM();
     hResult = GetItemObject(SVGIO_SELECTION, IID_PPV_ARG(IContextMenu, &m_pCM));
     if (FAILED_UNEXPECTEDLY(hResult))
         goto cleanup;
@@ -1531,15 +1538,10 @@ HRESULT CDefView::OpenSelectedItems()
     InvokeContextMenuCommand(uCommand);
 
 cleanup:
+    InitCM();
 
     if (hMenu)
         DestroyMenu(hMenu);
-
-    if (m_pCM)
-    {
-        IUnknown_SetSite(m_pCM, NULL);
-        m_pCM.Release();
-    }
 
     return hResult;
 }
@@ -1580,12 +1582,7 @@ LRESULT CDefView::OnContextMenu(UINT uMsg, WPARAM wParam, LPARAM lParam, BOOL &b
     m_cidl = m_ListView.GetSelectedCount();
 
     /* Release cached IContextMenu */
-    if (m_pCM)
-    {
-        IUnknown_SetSite(m_pCM, NULL);
-        m_pCM.Release();
-    }
-
+    InitCM();
     hResult = GetItemObject( m_cidl ? SVGIO_SELECTION : SVGIO_BACKGROUND, IID_PPV_ARG(IContextMenu, &m_pCM));
     if (FAILED_UNEXPECTEDLY(hResult))
         goto cleanup;
@@ -1643,12 +1640,8 @@ LRESULT CDefView::OnContextMenu(UINT uMsg, WPARAM wParam, LPARAM lParam, BOOL &b
     InvokeContextMenuCommand(uCommand - CONTEXT_MENU_BASE_ID);
 
 cleanup:
-    if (m_pCM)
-    {
-        IUnknown_SetSite(m_pCM, NULL);
-        m_pCM.Release();
-    }
-
+    InitCM();
+    
     if (m_hContextMenu)
     {
         DestroyMenu(m_hContextMenu);
@@ -1663,6 +1656,8 @@ LRESULT CDefView::OnExplorerCommand(UINT uCommand, BOOL bUseSelection)
     HRESULT hResult;
     HMENU hMenu = NULL;
 
+    /* Release cached IContextMenu */
+    InitCM();
     hResult = GetItemObject( bUseSelection ? SVGIO_SELECTION : SVGIO_BACKGROUND, IID_PPV_ARG(IContextMenu, &m_pCM));
     if (FAILED_UNEXPECTEDLY( hResult))
         goto cleanup;
@@ -1700,12 +1695,8 @@ LRESULT CDefView::OnExplorerCommand(UINT uCommand, BOOL bUseSelection)
     InvokeContextMenuCommand(uCommand);
 
 cleanup:
-    if (m_pCM)
-    {
-        IUnknown_SetSite(m_pCM, NULL);
-        m_pCM.Release();
-    }
-
+    InitCM();
+    
     if (hMenu)
         DestroyMenu(hMenu);
 
